Correct cursor rectangle size calculation - noticeable when linespace>1

Thanks bwalk c17n net for bug and patch.

BUG: 343283